--- a/q/275241.html
+++ b/q/275241.html
@@ -26,11 +26,32 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>037</td><td>JavaScript ES6</td><td>240829T171331Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275242#275242">Arnauld</a></td></tr>
-<tr d-ix="1"><td>023</td><td>Charcoal</td><td>240829T232654Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275249#275249">Neil</a></td></tr>
-<tr d-ix="2"><td>062</td><td>C gcc</td><td>240829T203006Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275246#275246">jdt</a></td></tr>
+<tr d-ix="0"><td>013</td><td>05AB1E</td><td>240830T073517Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275257#275257">Kevin Cr</a></td></tr>
+<tr d-ix="1"><td>037</td><td>JavaScript ES6</td><td>240829T171331Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275242#275242">Arnauld</a></td></tr>
+<tr d-ix="2"><td>023</td><td>Charcoal</td><td>240829T232654Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275249#275249">Neil</a></td></tr>
+<tr d-ix="3"><td>062</td><td>C gcc</td><td>240829T203006Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275246#275246">jdt</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>JavaScript (ES6), 37 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 13 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<pre><code>žJ%žyвā≠žy*+R
+</code></pre>
+<p>Port of <a href="https://codegolf.stackexchange.com/a/275249/52210"><em>@Neil</em>'s Charcoal answer</a>, so make sure to upvote that answer as well!</p>
+<p><a href="https://tio.run/##yy9OTMpM/f//6D4v1aP7Ki9sOtL4qHMBkKWlHfT/v6GRsYkpAA" rel="nofollow noreferrer">Try it online</a> or <a href="https://tio.run/##yy9OTMpM/V9Waa@k8KhtkoKSfaXL/6P7vFSP7qu8sOlI46POBUCWlnbQf53/0YZGxiamOgY6hjqGRuY6RqamZqY6RgaW5oamhjpGhibmJhbGZibmOrqGOrpGOoaGhsaWFsaxAA" rel="nofollow noreferrer">verify all test cases</a>.</p>
+<p><strong>Explanation:</strong></p>
+
+<pre class="lang-python prettyprint-override"><code>  %           # Modulo the (implicit) input-integer by
+žJ            # constant 4294967296
+     в        # Then convert it from a base-10 integer to a list in base
+   žy         # constant 128
+      ā       # Push a list in the range [1,length] (without popping)
+       ≠      # Check for each that it's NOT 1, so we now have a list [0,1,1,1,...]
+          *   # Multiply each by
+        žy    # constant 128
+           +  # Add that to the values at the same positions in the list
+            R # Then reverse the list
+              # (after which it is output implicitly as result)
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1>JavaScript (ES6), 37 bytes</h1>
 <p>Expects an integer and returns an array of bytes.</p>
 
 <pre class="lang-javascript prettyprint-override"><code>f=n=&gt;n&gt;&gt;7?[n&amp;127|128,...f(n&gt;&gt;&gt;7)]:[n]
@@ -51,7 +72,7 @@ n &gt;&gt; 7 ?      // if any bit at position 8 .. 32 of n is set:
   [ n ]       //   append n and stop the recursion
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 23 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 23 bytes</h1>
 <pre><code>∨Ｉ⮌Ｅ↨﹪ＮＸ²Ｉ32¹²⁸⁺ι∧κ¹²⁸0
 </code></pre>
 <p><a href="https://tio.run/##JYvBDsIgEAV/hXBaEkwELjWe1JMHbeMfYEtiI4VmgfbzV1pvk5n3@o/FPlpP1OEYMrQIN5syvNziMDl42BmudoM4FB/hHuaSn2V6OwQhWRfXClqy/cSN5kJUrXSzRV8SjJJdwgDfvxR75sc6OxMppcypMXRY/A8" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
@@ -76,7 +97,7 @@ n &gt;&gt; 7 ?      // if any bit at position 8 .. 32 of n is set:
                         Implicitly print
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, 62 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, 62 bytes</h1>
 
 <pre class="lang-c prettyprint-override"><code>v;f(unsigned n){v=n&gt;&gt;7;printf(&quot;%02X &quot;,v?n&amp;127|128:n);v&amp;&amp;f(v);}
 </code></pre>
