--- a/q/275241.html
+++ b/q/275241.html
@@ -26,19 +26,31 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>059</td><td>C gcc</td><td>240829T203006Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275246#275246">jdt</a></td></tr>
-<tr d-ix="1"><td>013</td><td>05AB1E</td><td>240830T073517Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275257#275257">Kevin Cr</a></td></tr>
-<tr d-ix="2"><td>037</td><td>JavaScript ES6</td><td>240829T171331Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275242#275242">Arnauld</a></td></tr>
-<tr d-ix="3"><td>023</td><td>Charcoal</td><td>240829T232654Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275249#275249">Neil</a></td></tr>
+<tr d-ix="0"><td>098</td><td>Python 2</td><td>240830T114323Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275263#275263">Lucenapo</a></td></tr>
+<tr d-ix="1"><td>059</td><td>C gcc</td><td>240829T203006Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275246#275246">jdt</a></td></tr>
+<tr d-ix="2"><td>013</td><td>05AB1E</td><td>240830T073517Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275257#275257">Kevin Cr</a></td></tr>
+<tr d-ix="3"><td>037</td><td>JavaScript ES6</td><td>240829T171331Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275242#275242">Arnauld</a></td></tr>
+<tr d-ix="4"><td>023</td><td>Charcoal</td><td>240829T232654Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275249#275249">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, <s>62</s> 59 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/2/" rel="nofollow noreferrer">Python 2</a>, 98 bytes</h1>
+
+<pre class="lang-python prettyprint-override"><code>def f(x):
+ x%=2**32;y=bin(x)[2:];z=[]
+ while y:z+=int(y[-7:],2)+128,;y=y[:-7]
+ z[-1]-=128
+ print z
+</code></pre>
+<p><a href="https://tio.run/##PYtBCsMgEEX3nsJNQZMIcYzRGDyJuCmNJFDSUAKNXt5aF938@bx5/4jn@toh58cScCAXNQhfNwtNI2CO9r7thTkwfk7WeYQ/6/ZccDSptdt@kuiYMr4D2nLQXRlEZ5gqXnKMe2YLRfh4FxWnHEhPUSC8BqjfASlHWUs/KS7rC/igBi3GoRqsMvaHuq45F5MWNH8B" rel="nofollow noreferrer" title="Python 2 – Try It Online">Try it online!</a></p>
+<p>Probably can be reduced quite a bit.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, <s>62</s> 59 bytes</h1>
 
 <pre class="lang-c prettyprint-override"><code>f(n){printf(&quot;%02X &quot;,n&amp;127|!!(n=n&gt;&gt;7&amp;33554431)&lt;&lt;7);n&amp;&amp;f(n);}
 </code></pre>
 <p><a href="https://tio.run/##bY/dasMwDIXv@xSqYcFeExb/1SlJ@hyD0YuS1cWwOaVOGSzLq89T0jRXE8aSPvscy012bpoYLfWsv1yd7ywlT7l4BZL6hAvzs15TX/v93iRSaq2U5KyqDCt9koyicogogs@j85RBvwKMEXSn0IW3A9TQQ54CxyVMCkLrrcaU7wzXCAVXRhVyq/Aswz5bQIEKzuWukDCUi23T3nCvIbjvU2vp9AqDl0f/fAf3@7a9Ah1Frs5LcNWkxWKzeQw6xvLpd7Ql6Ty4O8wmkxH9B15uXaCEzGRYDfG3sR/Hc4jZ1x8" rel="nofollow noreferrer" title="C (gcc) – Try It Online">Try it online!</a></p>
 <p>-3 bytes thanks to @Arnauld!</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 13 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 13 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>žJ%žyвā≠žy*+R
 </code></pre>
 <p>Port of <a href="https://codegolf.stackexchange.com/a/275249/52210"><em>@Neil</em>'s Charcoal answer</a>, so make sure to upvote that answer as well!</p>
@@ -58,7 +70,7 @@
               # (after which it is output implicitly as result)
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1>JavaScript (ES6), 37 bytes</h1>
+<div id="pu3" class="pu"><h1>JavaScript (ES6), 37 bytes</h1>
 <p>Expects an integer and returns an array of bytes.</p>
 
 <pre class="lang-javascript prettyprint-override"><code>f=n=&gt;n&gt;&gt;7?[n&amp;127|128,...f(n&gt;&gt;&gt;7)]:[n]
@@ -79,7 +91,7 @@ n &gt;&gt; 7 ?      // if any bit at position 8 .. 32 of n is set:
   [ n ]       //   append n and stop the recursion
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 23 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 23 bytes</h1>
 <pre><code>∨Ｉ⮌Ｅ↨﹪ＮＸ²Ｉ32¹²⁸⁺ι∧κ¹²⁸0
 </code></pre>
 <p><a href="https://tio.run/##JYvBDsIgEAV/hXBaEkwELjWe1JMHbeMfYEtiI4VmgfbzV1pvk5n3@o/FPlpP1OEYMrQIN5syvNziMDl42BmudoM4FB/hHuaSn2V6OwQhWRfXClqy/cSN5kJUrXSzRV8SjJJdwgDfvxR75sc6OxMppcypMXRY/A8" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
