--- a/q/275241.html
+++ b/q/275241.html
@@ -26,31 +26,30 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>012</td><td>Vyxal 3</td><td>240830T122450Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275264#275264">pacman25</a></td></tr>
-<tr d-ix="1"><td>050</td><td>Python 2</td><td>240830T114323Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275263#275263">Lucenapo</a></td></tr>
-<tr d-ix="2"><td>059</td><td>C gcc</td><td>240829T203006Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275246#275246">jdt</a></td></tr>
+<tr d-ix="0"><td>056</td><td>C gcc</td><td>240829T203006Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275246#275246">jdt</a></td></tr>
+<tr d-ix="1"><td>012</td><td>Vyxal 3</td><td>240830T122450Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275264#275264">pacman25</a></td></tr>
+<tr d-ix="2"><td>050</td><td>Python 2</td><td>240830T114323Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275263#275263">Lucenapo</a></td></tr>
 <tr d-ix="3"><td>013</td><td>05AB1E</td><td>240830T073517Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275257#275257">Kevin Cr</a></td></tr>
 <tr d-ix="4"><td>037</td><td>JavaScript ES6</td><td>240829T171331Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275242#275242">Arnauld</a></td></tr>
 <tr d-ix="5"><td>023</td><td>Charcoal</td><td>240829T232654Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275249#275249">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-3" rel="nofollow noreferrer">Vyxal 3</a>, 12 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, <s>62</s> <s>59</s> 56 bytes</h1>
+
+<pre class="lang-c prettyprint-override"><code>v;f(n){v=0U+n&gt;&gt;7;printf(&quot;%02X &quot;,v?n&amp;127|128:n);v&amp;&amp;f(v);}
+</code></pre>
+<p><a href="https://tio.run/##bY9ha8MgEIa/91ccgQVdEqYmqelcul8xGIx@KK4WYTOlpg6W5a8vu6RpPu0Q9Z679/XU2VHrYQjKEEe7ULOXxG23Up3O1rWGRHdMvEKUhmcXcyF/uKgeHVUhjg0JVPUDdsHn3jpCoVsBxgjag2/92w5q6IClwHEJmYIoy3WJB9tIXiIUvJBFla8LrGWYZwuoUMF5vqly6NViq5sL7jV4@31oDJleofBwy@@v4NpvmjOQUWRrpsA@TVq8JMlt0DGWX76jbZTOg9vdbDIZkX/g6dJ6EkUz6Vf98KvNx/7oh@zrDw" rel="nofollow noreferrer" title="C (gcc) – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-3" rel="nofollow noreferrer">Vyxal 3</a>, 12 bytes</h1>
 <pre><code>₃E%₆yDκ≠₆×+Ṛ
 </code></pre>
 <p><a href="https://vyxal.github.io/latest.html#WyIiLCIiLCLigoNFJeKChnlEzrriiaDigobDlyvhuZoiLCIiLCIyNTU2NSIsIjMuNC4yIl0=" rel="nofollow noreferrer">Try it Online!</a></p>
 <p>Port of Charcoal, but there's a one byte built in for 128 so it beats 05ab1e lol</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://docs.python.org/2/" rel="nofollow noreferrer">Python 2</a>, <s>98</s> 50 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://docs.python.org/2/" rel="nofollow noreferrer">Python 2</a>, <s>98</s> 50 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>lambda x:[128+x%128]+f(x%2**32&gt;&gt;7)if x&amp;-128else[x]
 </code></pre>
 <p><a href="https://tio.run/##K6gsycjPM/qfZhvzPycxNyklUaHCKtrQyEK7QhVIxmqnaVSoGmlpGRvZ2ZlrZqYpVKjpAsVTc4pToyti/xcUZeaVKKRpGGhywZiGSEwjcwTHyNTUzBSJa2BpbmiKpNjI0MTcxMLYzARJjy6SvC5cgQWSDYaGxpYWxpr/AQ" rel="nofollow noreferrer" title="Python 2 – Try It Online">Try it online!</a></p>
-</div>
-<div id="pu2" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, <s>62</s> 59 bytes</h1>
-
-<pre class="lang-c prettyprint-override"><code>f(n){printf(&quot;%02X &quot;,n&amp;127|!!(n=n&gt;&gt;7&amp;33554431)&lt;&lt;7);n&amp;&amp;f(n);}
-</code></pre>
-<p><a href="https://tio.run/##bY/dasMwDIXv@xSqYcFeExb/1SlJ@hyD0YuS1cWwOaVOGSzLq89T0jRXE8aSPvscy012bpoYLfWsv1yd7ywlT7l4BZL6hAvzs15TX/v93iRSaq2U5KyqDCt9koyicogogs@j85RBvwKMEXSn0IW3A9TQQ54CxyVMCkLrrcaU7wzXCAVXRhVyq/Aswz5bQIEKzuWukDCUi23T3nCvIbjvU2vp9AqDl0f/fAf3@7a9Ah1Frs5LcNWkxWKzeQw6xvLpd7Ql6Ty4O8wmkxH9B15uXaCEzGRYDfG3sR/Hc4jZ1x8" rel="nofollow noreferrer" title="C (gcc) – Try It Online">Try it online!</a></p>
-<p>-3 bytes thanks to @Arnauld!</p>
 </div>
 <div id="pu3" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 13 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>žJ%žyвā≠žy*+R
