--- a/q/275241.html
+++ b/q/275241.html
@@ -26,18 +26,20 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>056</td><td>C gcc</td><td>240829T203006Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275246#275246">jdt</a></td></tr>
+<tr d-ix="0"><td>053</td><td>C gcc</td><td>240829T203006Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275246#275246">jdt</a></td></tr>
 <tr d-ix="1"><td>012</td><td>Vyxal 3</td><td>240830T122450Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275264#275264">pacman25</a></td></tr>
 <tr d-ix="2"><td>050</td><td>Python 2</td><td>240830T114323Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275263#275263">Lucenapo</a></td></tr>
 <tr d-ix="3"><td>013</td><td>05AB1E</td><td>240830T073517Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275257#275257">Kevin Cr</a></td></tr>
 <tr d-ix="4"><td>037</td><td>JavaScript ES6</td><td>240829T171331Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275242#275242">Arnauld</a></td></tr>
 <tr d-ix="5"><td>023</td><td>Charcoal</td><td>240829T232654Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275249#275249">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, <s>62</s> <s>59</s> 56 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, <s>62</s> <s>59</s> 53 bytes</h1>
 
-<pre class="lang-c prettyprint-override"><code>v;f(n){v=0U+n&gt;&gt;7;printf(&quot;%02X &quot;,v?n&amp;127|128:n);v&amp;&amp;f(v);}
+<pre class="lang-c prettyprint-override"><code>f(n){printf(&quot;%02X &quot;,n&amp;127|!!(n=n+0U&gt;&gt;7)&lt;&lt;7);n&amp;&amp;f(n);}
 </code></pre>
-<p><a href="https://tio.run/##bY9ha8MgEIa/91ccgQVdEqYmqelcul8xGIx@KK4WYTOlpg6W5a8vu6RpPu0Q9Z679/XU2VHrYQjKEEe7ULOXxG23Up3O1rWGRHdMvEKUhmcXcyF/uKgeHVUhjg0JVPUDdsHn3jpCoVsBxgjag2/92w5q6IClwHEJmYIoy3WJB9tIXiIUvJBFla8LrGWYZwuoUMF5vqly6NViq5sL7jV4@31oDJleofBwy@@v4NpvmjOQUWRrpsA@TVq8JMlt0DGWX76jbZTOg9vdbDIZkX/g6dJ6EkUz6Vf98KvNx/7oh@zrDw" rel="nofollow noreferrer" title="C (gcc) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##bY9ha8MgEIa/91dchQVdEqYmqSlJ@i8Gg9EPxdYibKbUlMGy/PW5S5rm0w5R77n3Xk@dnrUOwVDH@svVus5Q8sTlG5DERUKqn/WausbF/HW3U6yuFatcFI3yaggoh8@DdZRBvwKMEXQn3/n3PTTQA09A4JIqAVkUmwIPvlWiQChFrvIy2@RYSzFPF1BihxDZtsxgqBZb3d5wb8Db71Nr6PQKg5dH/nwHd71pr0DHJtvwCmw99eIljh@DjrF894i2JJkHt/vZZDKi/8DLrfOUkJkMqyH8avNxOPuQfv0B" rel="nofollow noreferrer" title="C (gcc) – Try It Online">Try it online!</a></p>
+<p>The literal <code>0U</code> is an unsigned integer constant. Adding it to <code>n</code> promotes <code>n</code> to an unsigned type.</p>
+<p>-3 bytes thanks to @Arnauld!</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-3" rel="nofollow noreferrer">Vyxal 3</a>, 12 bytes</h1>
 <pre><code>₃E%₆yDκ≠₆×+Ṛ
