--- a/q/275241.html
+++ b/q/275241.html
@@ -26,14 +26,26 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>053</td><td>C gcc</td><td>240829T203006Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275246#275246">jdt</a></td></tr>
-<tr d-ix="1"><td>012</td><td>Vyxal 3</td><td>240830T122450Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275264#275264">pacman25</a></td></tr>
-<tr d-ix="2"><td>050</td><td>Python 2</td><td>240830T114323Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275263#275263">Lucenapo</a></td></tr>
-<tr d-ix="3"><td>013</td><td>05AB1E</td><td>240830T073517Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275257#275257">Kevin Cr</a></td></tr>
-<tr d-ix="4"><td>037</td><td>JavaScript ES6</td><td>240829T171331Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275242#275242">Arnauld</a></td></tr>
-<tr d-ix="5"><td>023</td><td>Charcoal</td><td>240829T232654Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275249#275249">Neil</a></td></tr>
+<tr d-ix="0"><td>115</td><td>C gcc</td><td>240830T170906Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275266#275266">Digital </a></td></tr>
+<tr d-ix="1"><td>053</td><td>C gcc</td><td>240829T203006Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275246#275246">jdt</a></td></tr>
+<tr d-ix="2"><td>012</td><td>Vyxal 3</td><td>240830T122450Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275264#275264">pacman25</a></td></tr>
+<tr d-ix="3"><td>050</td><td>Python 2</td><td>240830T114323Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275263#275263">Lucenapo</a></td></tr>
+<tr d-ix="4"><td>013</td><td>05AB1E</td><td>240830T073517Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275257#275257">Kevin Cr</a></td></tr>
+<tr d-ix="5"><td>037</td><td>JavaScript ES6</td><td>240829T171331Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275242#275242">Arnauld</a></td></tr>
+<tr d-ix="6"><td>023</td><td>Charcoal</td><td>240829T232654Z</td><td><a href="https://codegolf.stackexchange.com/questions/275241/encode-a-varint/275249#275249">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, <s>62</s> <s>59</s> 53 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, 115 bytes</h1>
+<p>Most of the other entries seem to be taking a recursive approach.  I was curious to try a direct approach using x86 instruction intrinsics.</p>
+<p>Returns the output in a <code>uint64_t</code> which can be cast to a 0-terminated char array.</p>
+<p>Definitely not the golfiest - and I'm sure there are golf opportunities I've missed.</p>
+
+<pre class="lang-c prettyprint-override"><code>#define P _pdep_u64
+uint64_t f(uint32_t n){return P(n,~(~0LU/510))|P((1&lt;&lt;((63-__builtin_clzll(n))/7))-1,~0LU/510);}
+</code></pre>
+<p><a href="https://tio.run/##hVLLbqswEN3zFaNUrewWGswrVKT9grvIpqvcClFjgiViIjBV1JR8@qVDQwnpXdQLa2Z05szx8XBrw3l3JRUvmlTAstapVPo@fzIua@XPUiXVBmvdVSoyqQSsIN6lYhc3gWc0SBF4sYaM9KHrYKjooRK6qRSsiDKP5Gj/eZ77zKb0Y0UIWy4JCVwrjl8bWWipYl68FwVRlM4XlFrMHPFR272VMoVc7NNmuyO8VLWGfk6IY25LroWuTajlu8C8EGqjcwoHA/AgCGT0FWZlBUTCI9gRSFgOwAju7uQ3uj87fKfOyAyubWc/M@FEv5YvNBoxMgOCVDdwtPcZnXZPGf6q2aSnNc73JaI1jF7mNpGKTHVrUWue1KJev6Dqg22eRzCMmbM4VxzfD3xMHfthwXxmXgiaHId5Cy90Aw970WOwxkJoAmPMfQjdNjJ@8673uszIqJDC/L/a2kbLfro7Lkol6sBDwmnDhcc8Tyq4RVhTaMSRU05vvhrPsO@lOAFxC3SFHzukdOBrTw8a1tFGy7t/PCuSTd1Z26Ti@aNKtHwTmL1uZWcNW78PA5SLf3WffwI" rel="nofollow noreferrer" title="C (gcc) – Try It Online">Try it online!</a></p>
+<p><a href="https://godbolt.org/z/vrdPG3x5K" rel="nofollow noreferrer">Compiler Explorer was helpful</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, <s>62</s> <s>59</s> 53 bytes</h1>
 
 <pre class="lang-c prettyprint-override"><code>f(n){printf(&quot;%02X &quot;,n&amp;127|!!(n=n+0U&gt;&gt;7)&lt;&lt;7);n&amp;&amp;f(n);}
 </code></pre>
@@ -41,19 +53,19 @@
 <p>The literal <code>0U</code> is an unsigned integer constant. Adding it to <code>n</code> promotes <code>n</code> to an unsigned type.</p>
 <p>-6 bytes thanks to @Arnauld!</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-3" rel="nofollow noreferrer">Vyxal 3</a>, 12 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-3" rel="nofollow noreferrer">Vyxal 3</a>, 12 bytes</h1>
 <pre><code>₃E%₆yDκ≠₆×+Ṛ
 </code></pre>
 <p><a href="https://vyxal.github.io/latest.html#WyIiLCIiLCLigoNFJeKChnlEzrriiaDigobDlyvhuZoiLCIiLCIyNTU2NSIsIjMuNC4yIl0=" rel="nofollow noreferrer">Try it Online!</a></p>
 <p>Port of Charcoal, but there's a one byte built in for 128 so it beats 05ab1e lol</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://docs.python.org/2/" rel="nofollow noreferrer">Python 2</a>, <s>98</s> 50 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://docs.python.org/2/" rel="nofollow noreferrer">Python 2</a>, <s>98</s> 50 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>lambda x:[128+x%128]+f(x%2**32&gt;&gt;7)if x&amp;-128else[x]
 </code></pre>
 <p><a href="https://tio.run/##K6gsycjPM/qfZhvzPycxNyklUaHCKtrQyEK7QhVIxmqnaVSoGmlpGRvZ2ZlrZqYpVKjpAsVTc4pToyti/xcUZeaVKKRpGGhywZiGSEwjcwTHyNTUzBSJa2BpbmiKpNjI0MTcxMLYzARJjy6SvC5cgQWSDYaGxpYWxpr/AQ" rel="nofollow noreferrer" title="Python 2 – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 13 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 13 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>žJ%žyвā≠žy*+R
 </code></pre>
 <p>Port of <a href="https://codegolf.stackexchange.com/a/275249/52210"><em>@Neil</em>'s Charcoal answer</a>, so make sure to upvote that answer as well!</p>
@@ -73,7 +85,7 @@
               # (after which it is output implicitly as result)
 </code></pre>
 </div>
-<div id="pu4" class="pu"><h1>JavaScript (ES6), 37 bytes</h1>
+<div id="pu5" class="pu"><h1>JavaScript (ES6), 37 bytes</h1>
 <p>Expects an integer and returns an array of bytes.</p>
 
 <pre class="lang-javascript prettyprint-override"><code>f=n=&gt;n&gt;&gt;7?[n&amp;127|128,...f(n&gt;&gt;&gt;7)]:[n]
@@ -94,7 +106,7 @@ n &gt;&gt; 7 ?      // if any bit at position 8 .. 32 of n is set:
   [ n ]       //   append n and stop the recursion
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 23 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 23 bytes</h1>
 <pre><code>∨Ｉ⮌Ｅ↨﹪ＮＸ²Ｉ32¹²⁸⁺ι∧κ¹²⁸0
 </code></pre>
 <p><a href="https://tio.run/##JYvBDsIgEAV/hXBaEkwELjWe1JMHbeMfYEtiI4VmgfbzV1pvk5n3@o/FPlpP1OEYMrQIN5syvNziMDl42BmudoM4FB/hHuaSn2V6OwQhWRfXClqy/cSN5kJUrXSzRV8SjJJdwgDfvxR75sc6OxMppcypMXRY/A8" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
