--- a/q/17294.html
+++ b/q/17294.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>142</td><td>Uiua</td><td>240830T214611Z</td><td><a href="https://codegolf.stackexchange.com/questions/17294/golfing-a-weasel-program/275271#275271">noodle p</a></td></tr>
+<tr d-ix="0"><td>137</td><td>Uiua</td><td>240830T214611Z</td><td><a href="https://codegolf.stackexchange.com/questions/17294/golfing-a-weasel-program/275271#275271">noodle p</a></td></tr>
 <tr d-ix="1"><td>222</td><td>J</td><td>240830T171122Z</td><td><a href="https://codegolf.stackexchange.com/questions/17294/golfing-a-weasel-program/275267#275267">Conor O&</a></td></tr>
 <tr d-ix="2"><td>089</td><td>Japt R</td><td>180601T092243Z</td><td><a href="https://codegolf.stackexchange.com/questions/17294/golfing-a-weasel-program/165896#165896">Shaggy</a></td></tr>
 <tr d-ix="3"><td>453</td><td>Go</td><td>240830T152328Z</td><td><a href="https://codegolf.stackexchange.com/questions/17294/golfing-a-weasel-program/275265#275265">bigyihsu</a></td></tr>
@@ -72,23 +72,21 @@
 <tr d-ix="43"><td>273</td><td>Python</td><td>140103T203204Z</td><td><a href="https://codegolf.stackexchange.com/questions/17294/golfing-a-weasel-program/17370#17370">tecywiz1</a></td></tr>
 <tr d-ix="44"><td>442</td><td>PHP</td><td>140103T190034Z</td><td><a href="https://codegolf.stackexchange.com/questions/17294/golfing-a-weasel-program/17358#17358">Sammitch</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Uiua, 142 bytes</h1>
-<pre><code>⍢(+1⊙⋅(⊃/↥(⊡⊢⍖)/+=⍉,,⊙◌⍥(⊂⊙:⊙⟜(⍜▽⋅(⊡⌊×27⚂,)&lt;0.05≡⊸⚂))100¤.)|&amp;p⊃$&quot;_: _ -- score _&quot;⋅⋅⋅(¬≍)⊙,).0⊏⌊×27≡⋅⚂,,&quot;METHINKS IT IS LIKE A WEASEL&quot;⊂@ +@A⇡26
+<div id="pu0" class="pu"><h1>Uiua, <s>142</s> 137 bytes</h1>
+<pre><code>R←⊏:⊂@ +@A⇡26⌊×27≡⋅⚂
+⍢(≡(⍜▽R&lt;0.05≡⊸⚂)↯100|⊃(&amp;p$&quot;_: _ -- score: _&quot;:⊙:)⊃⋅(≠28)⟜⋅⋅(+1)⊃(⊡⊢⍖)/↥/+=&quot;METHINKS IT IS LIKE A WEASEL&quot;⊸⍉)↯100R⊚28 0
 </code></pre>
-<p>Try it: <a href="https://uiua.org/pad?src=0_13_0-dev_2__4o2iKCsx4oqZ4ouFKOKKgy_ihqUo4oqh4oqi4o2WKS8rPeKNiSws4oqZ4peM4o2lKOKKguKKmTriipnin5wo4o2c4pa94ouFKOKKoeKMisOXMjfimoIsKTwwLjA14omh4oq44pqCKSkxMDDCpC4pfCZw4oqDJCJfOiBfIC0tIHNjb3JlIF8i4ouF4ouF4ouFKMKs4omNKeKKmSwpLjDiio_ijIrDlzI34omh4ouF4pqCLCwiTUVUSElOS1MgSVQgSVMgTElLRSBBIFdFQVNFTCLiioJAICtAQeKHoTI2Cg==" rel="nofollow noreferrer">Uiua pad</a></p>
-<p>With spaces: <a href="https://uiua.org/pad?src=0_13_0-dev_2__4oqCQCArQEHih6EyNgosIk1FVEhJTktTIElUIElTIExJS0UgQSBXRUFTRUwiCuKKj-KMisOXMjdb4o2l4pqCMjhdCi4wCuKNoigrMeKKmeKLhSgKICAgIMKkLgogICAg4o2lKOKKguKKmTriipnin5wo4o2c4pa94ouFKOKKoeKMisOXMjfimoIsKTwwLjA14omh4oq44pqCKSkxMDAKICAgIOKKgy_ihqUo4oqh4oqi4o2WKS8rPeKNiSws4oqZ4peMKQp8ICZw4oqDJCJfOiBfIC0tIHNjb3JlIF8i4ouF4ouF4ouFKMKs4omNKeKKmSwpCg==" rel="nofollow noreferrer">pad</a></p>
-<pre><code>⊂@ +@A⇡26
-,&quot;METHINKS IT IS LIKE A WEASEL&quot;
-⊏⌊×27[⍥⚂28]
-.0
-⍢(+1⊙⋅(
-    ¤.
-    ⍥(⊂⊙:⊙⟜(⍜▽⋅(⊡⌊×27⚂,)&lt;0.05≡⊸⚂))100
-    ⊃/↥(⊡⊢⍖)/+=⍉,,⊙◌)
-| &amp;p⊃$&quot;_: _ -- score _&quot;⋅⋅⋅(¬≍)⊙,)
+<p>Try it: <a href="https://uiua.org/pad?src=0_13_0-dev_2__UuKGkOKKjzriioJAICtAQeKHoTI24oyKw5cyN-KJoeKLheKaggrijaIo4omhKOKNnOKWvVI8MC4wNeKJoeKKuOKaginihq8xMDB84oqDKCZwJCJfOiBfIC0tIHNjb3JlOiBfIjriipk6KeKKg-KLhSjiiaAyOCnin5zii4Xii4UoKzEp4oqDKOKKoeKKouKNlikv4oalLys9Ik1FVEhJTktTIElUIElTIExJS0UgQSBXRUFTRUwi4oq44o2JKeKGrzEwMFLiipoyOCAwCg==" rel="nofollow noreferrer">Uiua pad</a></p>
+<p>With spaces: <a href="https://uiua.org/pad?src=0_13_0-dev_2__UiDihpAg4oqPOuKKgkAgK0BB4oehMjbijIrDlzI34omh4ouF4pqCCjAK4oavMTAwUuKKmjI4CuKNoijiiaEo4o2c4pa9UjwwLjA14omh4oq44pqCKeKGrzEwMAp8ID0iTUVUSElOS1MgSVQgSVMgTElLRSBBIFdFQVNFTCLiirjijYkKICDiioMo4oqh4oqi4o2WKS_ihqUvKwogIOKKgygmcCQiXzogXyAtLSBzY29yZTogXyI64oqZOiniioPii4Uo4omgMjgp4p-c4ouF4ouFKCsxKSkK" rel="nofollow noreferrer">pad</a></p>
+<pre><code>R ← ⊏:⊂@ +@A⇡26⌊×27≡⋅⚂
+0
+↯100R⊚28
+⍢(≡(⍜▽R&lt;0.05≡⊸⚂)↯100
+| =&quot;METHINKS IT IS LIKE A WEASEL&quot;⊸⍉
+  ⊃(⊡⊢⍖)/↥/+
+  ⊃(&amp;p$&quot;_: _ -- score: _&quot;:⊙:)⊃⋅(≠28)⟜⋅⋅(+1))
 </code></pre>
-<p>I wrote this on my phone, I intend to golf this by quite a bit when I get access to my computer in a few days. I see several potential areas for improvement, particularly in reducing the <code>⍢</code>-loop by moving the logic to the condition function, and by eliminating the <code>⍥</code>-loop by using reshape and doing it in a more array-programming way.</p>
-<p>I will write an explanation of the program once those improvements have been made.</p>
+<p>I will write an explanation of the program soon, I still have a few golf ideas to implement before then.</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="http://jsoftware.com/" rel="nofollow noreferrer">J</a>, 222 bytes</h1>
 <pre><code>0 I@((I=:(&gt;:@[;([:(0{]\:G&quot;1)((28|i.100 28)+28*1=r@20){&quot;1],&quot;1 r@27)@(][[:echo&quot;:@(G=:1#.T=]),~' -- score: ',~&quot;:@[,': ',A{~]))&amp;&gt;/)^:(1&amp;([-(T=:(A=:u:32,65+i.26)i.'METHINKS IT IS LIKE A WEASEL')-:&gt;@{))^:_)@;0{(r=:100 28?@$])@27
