--- a/q/151276.html
+++ b/q/151276.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>009</td><td>UiuaSBCS</td><td>240829T060733Z</td><td><a href="https://codegolf.stackexchange.com/questions/151276/find-the-longest-word-in-an-array/275230#275230">Europe20</a></td></tr>
+<tr d-ix="0"><td>007</td><td>UiuaSBCS</td><td>240829T060733Z</td><td><a href="https://codegolf.stackexchange.com/questions/151276/find-the-longest-word-in-an-array/275230#275230">Europe20</a></td></tr>
 <tr d-ix="1"><td>026</td><td>Zsh</td><td>240817T113257Z</td><td><a href="https://codegolf.stackexchange.com/questions/151276/find-the-longest-word-in-an-array/275027#275027">roblogic</a></td></tr>
 <tr d-ix="2"><td>003</td><td>Japt h</td><td>171220T140948Z</td><td><a href="https://codegolf.stackexchange.com/questions/151276/find-the-longest-word-in-an-array/151309#151309">Shaggy</a></td></tr>
 <tr d-ix="3"><td>006</td><td>Uiua</td><td>231117T222201Z</td><td><a href="https://codegolf.stackexchange.com/questions/151276/find-the-longest-word-in-an-array/266861#266861">chunes</a></td></tr>
@@ -95,19 +95,18 @@
 <tr d-ix="66"><td>nan</td><td>C#</td><td>171220T102105Z</td><td><a href="https://codegolf.stackexchange.com/questions/151276/find-the-longest-word-in-an-array/151278#151278">LiefdeWe</a></td></tr>
 <tr d-ix="67"><td>054</td><td>Swift</td><td>171220T105606Z</td><td><a href="https://codegolf.stackexchange.com/questions/151276/find-the-longest-word-in-an-array/151285#151285">Endenite</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.uiua.org/" rel="nofollow noreferrer">Uiua</a><sup><a href="https://tinyurl.com/Uiua-SBCS-Aug-16" rel="nofollow noreferrer">SBCS</a></sup>, 9 bytes</h1>
-<pre><code>⊢▽=/↥.⍚⧻.
+<div id="pu0" class="pu"><h1><a href="https://www.uiua.org/" rel="nofollow noreferrer">Uiua</a><sup><a href="https://tinyurl.com/Uiua-SBCS-Aug-16" rel="nofollow noreferrer">SBCS</a></sup>, <s>9</s> 7 bytes</h1>
+<pre><code>⊏⊢⍖≡◇⧻.
 </code></pre>
-<p><a href="https://www.uiua.org/pad?src=0_13_0-dev_2__RiDihpAg4oqi4pa9PS_ihqUu4o2a4qe7LgpGIHsidGlueSIgInNtYWxsIiAiYmlnZ2VyIiAiYmlnZ2VzdCJ9ICMgYmlnZ2VzdApGIHsib25lIiAidHdvIiAibm8ifSAgICAgICAgICAgICAgICAgICMgb25lCkYgeyJ0d28iICJvbmUiICJubyJ9ICAgICAgICAgICAgICAgICAgIyB0d28K" rel="nofollow noreferrer">Try it here!</a></p>
+<p><a href="https://www.uiua.org/pad?src=0_13_0-dev_2__RiDihpAg4oqP4oqi4o2W4omh4peH4qe7LgpGIHsidGlueSIgInNtYWxsIiAiYmlnZ2VyIiAiYmlnZ2VzdCJ9ICMgYmlnZ2VzdApGIHsib25lIiAidHdvIiAibm8ifSAgICAgICAgICAgICAgICAgICMgb25lCkYgeyJ0d28iICJvbmUiICJubyJ9ICAgICAgICAgICAgICAgICAgIyB0d28K" rel="nofollow noreferrer">Try it here!</a></p>
 <p>Both the input and output is <code>□ box</code>ed. Does not work on empty arrays.</p>
 <h2>Explanation</h2>
-<pre><code>Code      | Desc             | Stack
-⊢▽=/↥.⍚⧻. |                  | {&quot;tiny&quot; &quot;small&quot; &quot;bigger&quot; &quot;biggest&quot;}
-      ⍚⧻. | array of lengths | {&quot;tiny&quot; &quot;small&quot; &quot;bigger&quot; &quot;biggest&quot;} {4 5 6 7}
-   /↥.    | maximum          | {&quot;tiny&quot; &quot;small&quot; &quot;bigger&quot; &quot;biggest&quot;} {4 5 6 7} □7
-  =       | equals           | {&quot;tiny&quot; &quot;small&quot; &quot;bigger&quot; &quot;biggest&quot;} [0 0 0 1]
- ▽        | keep             | {&quot;biggest&quot;}
-⊢         | first            | ⌜biggest⌟
+<pre><code>Code      | Desc                    | Stack
+⊏⊢⍖≡◇⧻. |                          | {&quot;tiny&quot; &quot;small&quot; &quot;bigger&quot; &quot;biggest&quot;}
+    ≡◇⧻. | array of lengths         | {&quot;tiny&quot; &quot;small&quot; &quot;bigger&quot; &quot;biggest&quot;} [4 5 6 7]
+  ⍖     | index of descending sort | {&quot;tiny&quot; &quot;small&quot; &quot;bigger&quot; &quot;biggest&quot;} [3 2 1 0]
+ ⊢       | first element            | {&quot;tiny&quot; &quot;small&quot; &quot;bigger&quot; &quot;biggest&quot;}
+⊏        | select that index        | ⌜biggest⌟
 </code></pre>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a>, <sub><s>28</s></sub> 26 bytes</h1>
