--- a/q/275165.html
+++ b/q/275165.html
@@ -26,10 +26,10 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>114</td><td>C clang</td><td>240828T135743Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275205#275205">jdt</a></td></tr>
-<tr d-ix="1"><td>316</td><td>Rust</td><td>240831T124135Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275279#275279">138 Aspe</a></td></tr>
-<tr d-ix="2"><td>117</td><td>Scala 3</td><td>240831T021730Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275275#275275">138 Aspe</a></td></tr>
-<tr d-ix="3"><td>084</td><td>C89</td><td>240831T014044Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275274#275274">Consindi</a></td></tr>
+<tr d-ix="0"><td>109</td><td>C gcc</td><td>240831T014044Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275274#275274">Consindi</a></td></tr>
+<tr d-ix="1"><td>114</td><td>C clang</td><td>240828T135743Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275205#275205">jdt</a></td></tr>
+<tr d-ix="2"><td>316</td><td>Rust</td><td>240831T124135Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275279#275279">138 Aspe</a></td></tr>
+<tr d-ix="3"><td>117</td><td>Scala 3</td><td>240831T021730Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275275#275275">138 Aspe</a></td></tr>
 <tr d-ix="4"><td>011</td><td>Brachylog</td><td>240829T094440Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275233#275233">Fatalize</a></td></tr>
 <tr d-ix="5"><td>066</td><td>R</td><td>240827T191400Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275194#275194">David Jo</a></td></tr>
 <tr d-ix="6"><td>009</td><td>Japt</td><td>240827T064722Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275182#275182">Shaggy</a></td></tr>
@@ -46,7 +46,13 @@
 <tr d-ix="17"><td>018</td><td>Charcoal</td><td>240826T210607Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275168#275168">Neil</a></td></tr>
 <tr d-ix="18"><td>023</td><td>Jelly</td><td>240826T191846Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275166#275166">hyper-ne</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="http://clang.llvm.org/" rel="nofollow noreferrer">C (clang)</a>, <s>115</s> 114 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, 109 bytes</h1>
+
+<pre class="lang-c prettyprint-override"><code>n;main(c,s)char**s;{for(n=c;s[n]||(++s)[n=1];n++)printf(&quot;%s %s %s %s &quot;,*s,s[n],s[n],s[!s[n+1]*(n-1?1:3-c)]);}
+</code></pre>
+<p><a href="https://tio.run/##PYrNCsIwEAZfRQtCfppD8KKG4IOUHOLW1IJuJdub9dX91IPCMHMZcgMRwOGWR1bUiqZLrsZIeJSpKo4UpOO0LMpa0R1HnwJbq@915LmoZiOrP01rpP3eP60/tT4Zxc4f/WHrSCcdngAyTiD0OKO8qFzzIHAy95F2@zc" rel="nofollow noreferrer" title="C (gcc) – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="http://clang.llvm.org/" rel="nofollow noreferrer">C (clang)</a>, <s>115</s> 114 bytes</h1>
 
 <pre class="lang-c prettyprint-override"><code>f(**s,n,*o){for(int*w,j=n-1,i=*o=0;i&lt;n;i-=i-j&amp;&amp;!strstr(o,w)?j=i-!strcat(o,w):-1)asprintf(&amp;w,&quot;%s %s\n&quot;,s[j],s[i]);}
 </code></pre>
@@ -70,7 +76,7 @@
 }
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.rust-lang.org" rel="nofollow noreferrer">Rust</a>, 316 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.rust-lang.org" rel="nofollow noreferrer">Rust</a>, 316 bytes</h1>
 <p>316 bytes, it can be golfed much more.</p>
 <hr />
 <p>Golfed version. <a href="https://ato.pxeger.com/run?1=TZFLboMwEIbVbU_hZBFsiVjqruLVRa8QZYNQZMygWDUGmSFNBDlJN1m0h2pPU5OQhxejsef75-Wvb9u1eDr9dFguX_-eotKQMloF77o2kNB9sEhXGVsma5DRKuk1ILHB5RLvuUKwlHEwXQVWIDi_1AI3lWjoQJWfs6G_USg-gCrGx2BV72AQAxVcjoUo8_Orx9iRcWWw3ky6h4xizLgDOUvvQnGX-nnGuKy1BomUhWOzVYfkELuGg-BT4XYjRSOkwgO1XINx1cIDb7p2S206vSxfslsrLgh7BFM4_HGKG8ouaHFmj5cl_q7dDiuhHED6Z-LOeWvQdhpJTEq6SD3h-cTLRyNHU3gZC89oY93o2szovA_ejnN_0rnolP36Vf8" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -106,7 +112,7 @@ fn main() {
 }
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.scala-lang.org/" rel="nofollow noreferrer">Scala 3</a>, 117 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.scala-lang.org/" rel="nofollow noreferrer">Scala 3</a>, 117 bytes</h1>
 <p>Golfed version. <a href="https://ato.pxeger.com/run?1=VU-7bsMwDNz9FUQWS6ijoV0KFzJQZCrgTEHRAoYH2pYSNY7iSkpfhr-kS5Z26Rflb0onWbIcj8SRvPv-9TW2ePNXTKZ2-47OTsrD9bZ6UXWAORoLfRQBvGELOgWWGx-K2QpdyWW2UK8nDhJ-dkFPbw-7XGb9KHYyF1-mezJh9WAb9SF0i2GOXV-jV6xKDO3nIuBaMcPFBjuGMmOYVJwPl9pxdvxFjDh1w50TLfpwlTphrAnD-fkzQKM0bMg1Q7f0Kdw7h5_FIjhjlyVP4ZHUZLanRAAdTUNrmT6mYjHGCcTVCPUITcw5J-EQne_v96f6Dw" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <pre class="lang-scala prettyprint-override"><code>L=&gt;{val r=L.zipWithIndex.flatMap{case(b,i)=&gt;L.take(i).map(a=&gt;(a,b))}.flatMap{case(a,b)=&gt;Seq(a,a,b,b)};r.last+:r.init}
 </code></pre>
@@ -128,11 +134,6 @@ fn main() {
     println(f(List('a', 'b', 'c', 'd')))
   }
 }
-</code></pre>
-</div>
-<div id="pu3" class="pu"><h1>C89, 84 bytes</h1>
-<p>Takes names as command line arguments and prints the introductions to stdout.</p>
-<pre><code>main(n,s)char**s;{for(;s[n]||(++s)[n=1];n++)printf(&quot;%s %s %s %s &quot;,*s,s[n],s[n],*s);}
 </code></pre>
 </div>
 <div id="pu4" class="pu"><h1><a href="https://github.com/JCumin/Brachylog" rel="nofollow noreferrer">Brachylog</a>, 11 bytes</h1>
