--- a/q/275254.html
+++ b/q/275254.html
@@ -26,9 +26,148 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>911</td><td>Python3</td><td>240830T173518Z</td><td><a href="https://codegolf.stackexchange.com/questions/275254/convert-to-chomsky-normal-form/275268#275268">Ajax1234</a></td></tr>
+<tr d-ix="0"><td>458</td><td>GNU sed E</td><td>240831T145818Z</td><td><a href="https://codegolf.stackexchange.com/questions/275254/convert-to-chomsky-normal-form/275280#275280">鳴神裁四点一号</a></td></tr>
+<tr d-ix="1"><td>911</td><td>Python3</td><td>240830T173518Z</td><td><a href="https://codegolf.stackexchange.com/questions/275254/convert-to-chomsky-normal-form/275268#275268">Ajax1234</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Python3, 911 bytes</h1>
+<div id="pu0" class="pu"><h1>GNU <a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed</a> <code>-E</code>, 458 bytes</h1>
+<pre><code>s/^/;0,q/
+:q
+s/q/qq/g
+t3
+:3
+s/(,\w+)(,\w+,\w+)(.*)/\1,q\3;q\2/
+tq
+:r
+s/(.*)(;(q+)z)/\3\1/
+Tw
+:4
+s/^(q+)\&gt;(.*);((\w+)(,\1(,\w+)|(,\w+),\1))\&gt;/\1\2%\3;\4\6\7/
+t4
+s/^(q+)\&gt;(.*);((\w+),\1)\&gt;/\1\2%\3;\4z/
+t4
+s/q+//
+y/%/;/
+tr
+:w
+s/;(q+,q+,\w+)/&lt;\1/g
+s/(.*);(q+,q+)/\2\1/
+:g
+s/^((q+),(q+))\&gt;(.*);(\3(,\w+(,\w+)?))/\1;\2\6\4&lt;\5/
+tg
+s/^q+,q+//
+y/&lt;/;/
+tw
+s/,(a+,)/%\1/g
+s/(,q+),(a+)/\1%\2/g
+s/(.*)(%a+)/q\2&amp;/
+:s
+s/^q(%a+)(.*)\1\&gt;/q\1\2,q/
+ts
+s/^q%(a+)/;q,a/
+s/%/,/g
+tq
+</code></pre>
+<p><a href="https://tio.run/##bVLbTsMwDH33VxRBUcsyTC@A1IyhMeCRl/IYMXUMVTywLWuniYnf4jf4JIrtZFwkpCqxj@1zTpI2T7N@PV93OJnc3F1PJqgOZpDsPRuAC1gC7V2DD6hPlEUoLDRo0Vqsoc2gyCiNlNn0YllddHwUo0mUNZm2JkVoLRQrbqRCpCPbi7fUkJkE4X4DRU6lB0bNkDt0FHm@xDG/uY3ymFqI2aQhUZvcnJlzYv9/ntv/dG99q@0hwiuGqAlYQbEhjE0p6@zjgIzV3q4vkN2U7Ra1aLGY4uVb0mRi0jm9jPn8mkbOTD4wp6Qjc0Il4gMRZ2UVVT0VY7jTVEJdsWIS0uXtjEQhY3Sdh@SiETaBuEZnHFKJTspP1LpqKCTaqgopD1Hxi9luP1hVm2Cxbpfrll4X9oPbxeqlatunmUeP@T7QzEWaHtoZSxJ0ZtIUMwmyDHMJ8hxPse5IypJaRauVmDcr0G6XQMn3E0msuLQFtqscif6VagcJE9MoT@YrDgT//wKUQX8YjKZXwVswhjEnUwof4UrwEcWjMYw4qSj@ePcT63JW/s6rksvTUobLR1ol5@xzsWyfF/Om6998AQ" rel="nofollow noreferrer" title="sed – Try It Online">Try it online!</a></p>
+<h2>Usage</h2>
+<p>One-line input. Unary state and unary alphabet.</p>
+<pre><code>Input := Rule*
+Rule := &quot;;&quot; State RewriteList
+State := &quot;q&quot;+
+RewriteList := ( &quot;,&quot; ( State | Alphabet) )+ | Null
+Alphabet:= &quot;a&quot;+
+Empty := &quot;z&quot;
+</code></pre>
+<p>One letter state &quot;q&quot; considered to be initial state of input; the output additionally uses &quot;0&quot; to represent initial.</p>
+<p>For example if you have the language</p>
+<pre><code>S -&gt; AbB | C
+C -&gt; b | c
+B -&gt; AA | AC
+A -&gt; a | ε
+</code></pre>
+<p>you need to translate into this:</p>
+<pre><code>;q,qq,aa,qqq;q,qqqq;qqqq,aa;qqqq,aaa;qqq,qq,qq;qqq,qq,qqqq;qq,a;qqz
+</code></pre>
+<p>States S, A, B, C are translated into q, qq, qqq, qqqq respectively; similar for alphabets a, b, c.</p>
+<p>The output may contain some duplicated rules but doesn't have unnecessary rules no other states reference; since this is not a problem to unify duplicated rules I am not handling that.</p>
+<h2>Ungolfed</h2>
+<p>I tried with in order of step 1, 3, 4, 5, 2.</p>
+<pre><code># step 1
+s/^/;0,q/
+
+# rename every state; new state q can be introduced
+:q
+# s/\&lt;q/qq/g # readable alternative
+s/q/qq/g
+t3
+
+# step 3
+:3
+s/(,\w+)(,\w+,\w+)(.*)/\1,q\3;q\2/
+tq
+
+:r
+# step 4
+# choose a nullable state
+s/(.*)(;(q+)z)/\3\1/
+Tw
+
+# add nullable state rules
+:4
+s/^(q+)\&gt;(.*);((\w+)(,\1(,\w+)|(,\w+),\1))\&gt;/\1\2%\3;\4\6\7/
+t4
+s/^(q+)\&gt;(.*);((\w+),\1)\&gt;/\1\2%\3;\4z/
+t4
+
+# step 4 done for that state
+s/q+//
+y/%/;/
+tr
+
+# step 5
+# protect every A -&gt; BC
+:w
+s/;(q+,q+,\w+)/&lt;\1/g
+
+# choose one A -&gt; B
+s/(.*);(q+,q+)/\2\1/
+
+# no need to unprotect A -&gt; BC
+# if A -&gt; B and B -&gt; ... add A -&gt; ...
+:g
+s/^((q+),(q+))\&gt;(.*);(\3(,\w+(,\w+)?))/\1;\2\6\4&lt;\5/
+tg
+
+# remove A -&gt; B
+s/^q+,q+//
+
+# end of step 5 or just removed A -&gt; B
+y/&lt;/;/
+tw
+
+# step 2
+# mark every alphabet a in A -&gt; Ba and A -&gt; aB
+s/,(a+,)/%\1/g
+s/(,q+),(a+)/\1%\2/g
+
+# choose one alphabet
+s/(.*)(%a+)/q\2&amp;/
+
+# now rewrite rules
+:s
+s/^q(%a+)(.*)\1\&gt;/q\1\2,q/
+ts
+s/^q%(a+)/;q,a/
+
+# still having any?
+s/%/,/g
+tq # to be able to get more states
+
+# COMPLETED!
+# some rules are duplicated but whatever
+</code></pre>
+<p><a href="https://tio.run/##bVTtbtowFP3vp3DVMcFI8UJoJ5GuFaXs174k@jMqMsSFbCHGiUNE1dfaa@yRxu69NrSrJkX2sX3u1/F1KpWeLYt6L2azydfb2UwEb1IWnmQJYx/ZhsG8P@WVVRseskrci/h9YARjp7xUhVwrrraq3AFBWhXzQjUOcsMXsuBzxbPCljqtFyplQwNmlUgujTBGLDn6kKmc54rL3KqykDbbKojizpmNMA7FjtgwgoN2kDTdDo0O9d51RBIGJolik/QFs4axYXmwGgBYrLSuIAAv6jynWJQgOgPjdtw23c4jOImSULC7BiPKNH3F5mWdq4oNBygBWiRXaB232z6f0GX25CZYd4ACmSX9FqSWDJKL5ANk9397pP/DfiTqsQqe6kLxB11yu5L2mL/pCsF2oiVioJdH@jmATamtWlh/OSN@dsVvxmzYgBUWHBgnn7iEopfsWSWM49heH88GffqoDzALDbesUm41r4tDnEOEU549@AWXRQojwF6vR5KO/IINlyQD6hDgcFQjiUg/J@J1B682hsAXyeAyOYcil67v1nr7Is17ylBQcgpi6gevAwfBftSV9RbpwWQnLkmy5ihZH8Balj@9XjLfrORcWWiarPBWkuohLDFq0JbdoCNaJCA2JhUjUamwBZ34WtWDz0PftZAKLfvWi9pAlk2ZPbdaRaURDw2gOa6ADy2Cz8@60xYFjE0ghasly3O@ktusWEK6u2sgtUSAL8nAY4Mbg/dITQ1wCfWtdekbvEL78bcv3z9P7ia3J@hMr30uXAIrrTd5tgBmyue15Q00IooF/4ZSNlzXdlNb@F2A4SddrqVFotvtYdOJpCCd4F07wcJQ9An0@yIiEEViQGAwEOdiuYeyDFQmYTSEcTK0dZgJBPQ9I8IBHj0ylCZwTuIXy9htkSd0E3hn/sRtMv9DZGyKtz6a3/AnPmZjXMwBLhh192gEeDRmrjUA//7lLeppOn25llM8nk/JeLqAkda4@qM3NtNFtT@b/AU" rel="nofollow noreferrer" title="sed – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1>Python3, 911 bytes</h1>
 <pre class="lang-py prettyprint-override"><code>import string as S
 from itertools import*
 L=str.islower
