--- a/q/275254.html
+++ b/q/275254.html
@@ -26,10 +26,10 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>461</td><td>GNU sed E</td><td>240831T145818Z</td><td><a href="https://codegolf.stackexchange.com/questions/275254/convert-to-chomsky-normal-form/275280#275280">鳴神裁四点一号</a></td></tr>
+<tr d-ix="0"><td>457</td><td>GNU sed E</td><td>240831T145818Z</td><td><a href="https://codegolf.stackexchange.com/questions/275254/convert-to-chomsky-normal-form/275280#275280">鳴神裁四点一号</a></td></tr>
 <tr d-ix="1"><td>911</td><td>Python3</td><td>240830T173518Z</td><td><a href="https://codegolf.stackexchange.com/questions/275254/convert-to-chomsky-normal-form/275268#275268">Ajax1234</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>GNU <a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed</a> <code>-E</code>, 461 bytes</h1>
+<div id="pu0" class="pu"><h1>GNU <a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed</a> <code>-E</code>, <s>461</s> 457 bytes</h1>
 <pre><code>s/^/;0,q/
 :q
 s/q/qq/g
@@ -47,7 +47,7 @@ s/^(q+)\&gt;(.*);((\w+),\1)\&gt;/\1\2%\3;\4z/
 t4
 s/q+//
 y/%/;/
-tr
+t3
 :w
 s/;(q+,q+,\w+)/&lt;\1/g
 s/(.*);(q+,q+)/\2\1/
@@ -56,9 +56,9 @@ s/^((q+),(q+))\&gt;(.*);(\3(,\w+(,\w+)?))/\1;\2\6\4&lt;\5/
 tg
 s/^q+,q+//
 y/&lt;/;/
-tw
+t3
 s/,(a+,)/%\1/g
-s/(,q+),(a+)/\1%\2/g
+s/(,q+),a/\1%a/g
 s/(.*)(%a+)/q\2&amp;/
 :s
 s/^q(%a+)\&gt;(.*)\1\&gt;/q\1\2,q/
@@ -67,7 +67,7 @@ s/^q%(a+)/;q,\1/
 s/%/,/g
 tq
 </code></pre>
-<p><a href="https://tio.run/##bVLbbtswDH3nV3joPNiLUtaXdoCVZUjT7nEv7qPQwGkKow9LwthBsKC/td/YJ80jKWVtgQKGRB6S5xxJ7h5X43a9H3CxuP1xs1ig@biC7MOTA/gKW@B96PAe7YUhhIqgQ0IibKEvoCo4TYw7jFJdfXT@OUWXGXKFJZcj9ATVThq5kNiERumRGwqXIdwdoCq5dC@om0qHTZLAl3nmZ79xnnILM7s8ZmpXuiv3hdnfn5f2N93H0EojRPiFMVoGdlAdGBNThrx9nLCxNtgNBbabi92qVS0RM7L8l3SFmvROv6VyfssjV66cuEvW0TmlUvGJiouySZqRSTE@aRqlbkQxi/nyTkaSWDC@zk/solM2hbwBPuWUi3xWeaTe12OlsWTEeccHNvJoNJxFu@YQbfb9dt/zA8NZ9H2z@9n0/eMqoOdyJejWqs5v7b1lGXo/eY6FBkWBpQZliZfYDqxFZJqGV9JYNlLotGtg9HuJNDZSOgLP8byS2Fep9ZAyCY0JZKHiQQi/MEAdjafRbHkdPUdzmEuy5PABrhWfcTybw0yShuM/v8PEvl7Vr/OmlvKy1uH6gVfNJfu72fZPm3U3jG//AQ" rel="nofollow noreferrer" title="sed – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##bVLbTuMwEH2fr8iKzSrZugy5wEpx6aqU8shL9tGicimKeKCtm1TVVvwWv8EnEWbG5iYhVfaZ2zln4rZ3y2Gz2vU4n8@uL@dzVD@XkP24NwDnsAG6@xZvUJ8oh1A5aNGhc9hAV0BVUJgosx@kcnp0/DtFkylnCu1MjtA5qLbcSIVEJ26QHqihMBnCvz1UJZVuOGvG3KGTJPBlnvnRXxSn1ELMJo@J2pTmzPwh9u/nuf1L9yG0ugEi/McYNcoKe8qxKeW8fRyRsSbYDQWym7PdqhEtFlN8vEuaQkx6p39T3l/TyJkpR@aUdGROqER8FMRbVIkdqBTjN00WU5bGY/tuIoktOaBP@YsctMIkKS9OG46pSHvyA3W@Hic8op1i1y0tq/jBXH8Ube0@Wu@6za6jx4Wj6Gq9fbBdd7cM2WP@HGhWok7v7H1lGeYC8hwLAUWBpYCyxFNsetJyTllLpxPMl5PU2y1Aye8DCVZcOgDN0byQ6E@h9ilhYhoVyELFJyH8fQHqaDiOJouL6DGawpSDBcFbuJD8hPBkChMOLOHnpzCxq5f159jWXF7UMlzf0ikxRy/rTXe/XrX9cPYK" rel="nofollow noreferrer" title="sed – Try It Online">Try it online!</a></p>
 <h2>Usage</h2>
 <p>One-line input. Unary state and unary alphabet.</p>
 <pre><code>Input := Rule*
@@ -88,7 +88,7 @@ A -&gt; a | ε
 <pre><code>;q,qq,aa,qqq;q,qqqq;qqqq,aa;qqqq,aaa;qqq,qq,qq;qqq,qq,qqqq;qq,a;qqz
 </code></pre>
 <p>States S, A, B, C are translated into q, qq, qqq, qqqq respectively; similar for alphabets a, b, c.</p>
-<h2>Ungolfed</h2>
+<h2>Ungolfed 461 bytes answer</h2>
 <p>I tried with in order of step 1, 3, 4, 5, 2.</p>
 <p>Reading hint: I named alphabet labels taken from the qwerty keyboard;</p>
 <pre><code># step 1
