--- a/q/275270.html
+++ b/q/275270.html
@@ -26,21 +26,21 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>085</td><td>Python</td><td>240831T190213Z</td><td><a href="https://codegolf.stackexchange.com/questions/275270/snake-a-string-through-a-simplex/275283#275283">shape wa</a></td></tr>
+<tr d-ix="0"><td>084</td><td>Python</td><td>240831T190213Z</td><td><a href="https://codegolf.stackexchange.com/questions/275270/snake-a-string-through-a-simplex/275283#275283">shape wa</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 85 bytes</h1>
-<pre class="lang-python prettyprint-override"><code>f=lambda s,n,l,r=1:n and[f(s,n-1,i,(-1)**i)for i in range(1,l+1)[::r]][::r]or next(s)
+<div id="pu0" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <s>85</s> 84 bytes</h1>
+<pre class="lang-python prettyprint-override"><code>f=lambda s,n,l,r=1:n and[f(s,n-1,i+1,-(-1)**i)for i in range(l)[::r]][::r]or next(s)
 </code></pre>
 <p>Takes the string (<code>s</code>) as an iterator of characters -- to take a <code>str</code>, add <code>(s:=iter(s))and </code> as the first thing in the lambda body for +16 bytes.<br />
-Assumes <code>l</code> is nonzero -- otherwise, change <code>&lt;a&gt; and&lt;b&gt;or &lt;c&gt;</code> to <code>&lt;b&gt;if &lt;a&gt; else &lt;c&gt;</code> for +2 bytes.</p>
-<p><a href="https://ato.pxeger.com/run?1=zVbJbttADD3XXzE9SUonQGVnNeBD9mbfV8EobEuylciyLI3jJciX9JJL-xv9jvZrSpEjaWynSdEWRQOMQz7ykRyKGs2nL-FQtDrB09PnnnBnl76duxW_1q7bNRbzgPs8qpjlgNUC23J1QGZN7nF91jRmZjzD7UTMY17AolrQdHST--9MwyqXo2oVf8EcOAOhxwYF__7mq3Bi8dELwp6IWYVZBV2raZy958w0eK4UVaWkKnOZYmacOmmSVG-QWkpVm_ScWcyZDVIzqu24hJQUpNnybgnNY5SUGDbpxWlKaTrQnd8OOmE3igXZ85BzakiHgMmYyCbTzwP37vuD4cgslubmFxaXlsk9zzM_lscl5NlEFI0cXku3srq2vrG59WF7Z3dv_-Dw6Pjk9Oz84vLq-iYphGLkNSyM19Ak6IUiZA7yS2qpFgo4S52eyIYpCT35Y8Fvlf5xra6KXGtMqlyzEUJSJnAr9X4GAglaqDnEfdUBNNis1oLlwbqVFEqoiNyysForreplY4LcIkKR0zyU-Q_Jif0OUR-QNkohSDCIWoBaF6QIVgxLZOnkpsYUblF6DErdsdMaf9kRbR1p89HWplqUWmV75a5oP_8qCXJD6dlFO7WHkCEifUAGKN2D1JOtS-wjRE1AiijNgwSvkFZCbQGkRVhLsJaVLaXtnlC5lW6SymrIJDSMTtaX36SRXy_z60q_CP3ygVA7QiMU4Aip_YUjU-krdfQ_L41y3Gdx-pJFD3YIfqPMtiNtW2j7ALZtiWwisg7IBkprIMFZp61k3F3puYf2fbAdSOQMkRNATlE6BukI1qG0nyN6AcglSjcgXcO6UoYsGa1kxNRmZ-M0BXArfwCyAY2s0PRAcbKTr_lXw0jWqsLqZ6zB2As2Sjs49ZQi6Rejn8DXb3JK6GRLzrjx2bgDJJ8JmoZ0g_BRSu5EcFFittd2gtjrBCD7TtAULYMz5YuVXJtGXqgrF6Ixe2yUCwz-ag3Rq_nweXN1TzgR3KWejU2-cexEIqNU1HicuZozCJ2GcGz2oBgeOWt2BHsg1qNWKISRFwhdW_F9DBCzMAlsv9WMAt3j0sviDw" rel="nofollow noreferrer">Attempt This Online!</a> (does not have the final 3 test cases)</p>
+Assumes <code>l</code> is nonzero -- to support the case where <code>l</code> is zero, change <code>&lt;a&gt; and&lt;b&gt;or &lt;c&gt;</code> to <code>&lt;b&gt;if &lt;a&gt; else &lt;c&gt;</code> for +2 bytes.</p>
+<p><a href="https://ato.pxeger.com/run?1=zVbJbttADD3XXzE9SUrHQGVnNeBD9mbfV8EobEuylciyLI3jJciX9JJL-xv9jvZrSpEjaeykSdEWRQOMQz7ykRyKGs2nL-FItLvB4-PnvnCLi99O3apf7zTsOot5wH0eVc1KwOqBbbk6IEWTe-9MXtSLpjEz4xluN2Ie8wIW1YOWo_uGValEtRr-gilwhkKPDYr9_c1X4cTioxeEfRGzKrMKulbXOHvPmWnwXCmpSllVZjPFzDgN0iSp0SS1nKo26TmzlDObpGZU23EJKStIq-3dEJrHKCsxbNJLTynlp4Fu_U7QDXtRLMieh5xVQzoETMdENpl-Hrh_NxiOxmapPDs3v7C4RO55nrmJPC4hzyaiaOTwWrrlldW19Y3ND1vbO7t7-weHR8cnp2fnF5dX10khFCOvYX6yhhZBLxQhc5BfUkutUMBZ6vZFNkxJ6OkfC35r9I9rDVXkWnNa5ZqNEJIygVup9zMQSNBCzSHuqw6gwWa1NiwP1o2kUEJF5JaF1VppVS8bE-QGEYqc5qHMf0hO7LeI-oB0UApBgkHUAtR6IEWwYlgiSyc3NaFwi9JjUOqOndb4y45o60qbj7YO1aLUKtsrd0X7-VdJkBtKzx7aqT2EjBAZADJE6Q6kvmxdYh8jagJSQmkOJHiFtDJq8yAtwFqEtaRsKW33lMqtdJNUVlMmoWF0sr78Jo38-plfT_pF6JcPhNoRGqEAR0jtLxyZSl-po_95aZTjLoszkCx6sCPwG2e2bWnbRNsHsG1JZAORNUDWUVoFCc46bTnj7kjPXbTvgW1fIqeIHANygtIRSIewDqT9DNFzQC5QugbpCtalMmTJaCUjpjY7G6cnALfyByAb0MwKTQ8UJzv5Wn81jGStKKxBxhpOvGDjtINPnlIk_WL0E_j6TU8JnWzJGTc5G7eA5DNB05BuED5KyX0I7knM9jpOEHvdAGTfCVqibXCmfLGSK9PYC3XlQjRhj41KgcFfvSn6dR8-b67uCSeCu9Szsck3jp1IZJSqGo8zV3OGodMUjs3uFcMDZ62uYPfEetAKhTDyAqFry76PAWIWJoHtt5pRoHtcelf8AQ" rel="nofollow noreferrer">Attempt This Online!</a> (does not have the final 3 test cases)</p>
 <p>Ungolfed:</p>
 <pre class="lang-python prettyprint-override"><code>def snake(src, dimensions, length, reverse=False):
     if dimensions == 0:
         return next(src)
     maybe_rev = lambda seq: seq[::-1] if reverse else seq
-    return maybe_rev([snake(src, dimensions - 1, length=i, reverse=i % 2 == 1)
-        for i in maybe_rev(range(1, length + 1))])
+    return maybe_rev([snake(src, dimensions - 1, length=i+1, reverse=(i+1)%2==1)
+        for i in maybe_rev(range(length))])
 </code></pre>
 <p>Not really much to say -- just uses recursion to build the specified simplex, with characters coming from a stateful iterator. In the golfed code, instead of a boolean <code>reverse</code> parameter, we take <code>r</code>: 1 for forwards, -1 for backwards. With that change, <code>maybe_rev</code> simply becomes <code>lambda seq: seq[::r]</code>, and we use powers of -1 to express alternating directions.</p>
 </div>
